implement post template

--- a/client/src/app/content/content.component.html
+++ b/client/src/app/content/content.component.html
@@ -1,4 +1,6 @@
 <div class="row">
-  <div class="col-9 border-right"><p>posts here</p></div>
+  <div class="col-9 border-right">
+    <app-post></app-post>
+  </div>
   <div class="col-3"><p>article links here</p></div>
 </div>
