--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container-fluid">
   <app-navbar></app-navbar>
-  <app-content></app-content>
+  <router-outlet></router-outlet>
 </div>
