--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Easy-CMS</a>
+  <a class="navbar-brand" routerLink="/">Easy-CMS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -14,7 +14,7 @@
             Administration
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Administration</a>
+            <a class="dropdown-item" routerLink="/management" routerLinkActive="active">Administration</a>
             <a class="dropdown-item" href="#">Add new post</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Edit posts</a>
