--- a/client/src/app/management/management.component.html
+++ b/client/src/app/management/management.component.html
@@ -16,5 +16,6 @@
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
       <h1 class="h2 align-content-center">Dashboard</h1>
     </div>
+  </main>
+</div>
 <router-outlet></router-outlet>
-
