implement single post component and display posts from array

--- a/client/src/app/content/content.component.html
+++ b/client/src/app/content/content.component.html
@@ -2,5 +2,7 @@
   <div class="col-9 border-right">
     <app-post></app-post>
   </div>
-  <div class="col-3"><p>article links here</p></div>
+  <div class="col-3">
+    <p>article links here</p>
+  </div>
 </div>
