--- a/client/src/app/management/new-post/new-post.component.html
+++ b/client/src/app/management/new-post/new-post.component.html
@@ -1,1 +1,19 @@
-<p>new-post works!</p>
+<div class="row">
+  <div class="col-lg-12">
+    <form style="width: 100%">
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" class="form-control" id="title" name="title" [(ngModel)]="title" placeholder="Post title">
+      </div>
+      <div class="form-group">
+        <label for="author">Author</label>
+        <input type="text" class="form-control" id="author" name="author" [(ngModel)]="author" placeholder="Author">
+      </div>
+      <div class="form-group">
+        <label for="text">Text</label>
+        <textarea class="form-control" id="text" name="content" [(ngModel)]="content" placeholder="Post's content" rows="10"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary" (click)="sendPost($event)">Submit</button>
+    </form>
+  </div>
+</div>
