--- a/client/src/app/management/new-post/new-post.component.html
+++ b/client/src/app/management/new-post/new-post.component.html
@@ -4,14 +4,17 @@
       <div class="form-group">
         <label for="title">Title</label>
         <input type="text" class="form-control" id="title" name="title" [(ngModel)]="title" placeholder="Post title">
+        <p *ngIf="error.title" class="text-danger">{{error.title}}</p>
       </div>
       <div class="form-group">
         <label for="author">Author</label>
         <input type="text" class="form-control" id="author" name="author" [(ngModel)]="author" placeholder="Author">
+        <p *ngIf="error.author" class="text-danger">{{error.author}}</p>
       </div>
       <div class="form-group">
         <label for="text">Text</label>
         <textarea class="form-control" id="text" name="content" [(ngModel)]="content" placeholder="Post's content" rows="10"></textarea>
+        <p *ngIf="error.content" class="text-danger">{{error.content}}</p>
       </div>
       <button type="submit" class="btn btn-primary" (click)="sendPost($event)">Submit</button>
     </form>
