implement edit post list with navigation to edit form

--- a/client/src/app/management/management.component.html
+++ b/client/src/app/management/management.component.html
@@ -11,6 +11,10 @@
             <span data-feather="home"></span>
             New post <span class="sr-only">(current)</span>
           </a>
+          <a class="nav-link active" routerLink="/management/edit-post/">
+            <span data-feather="home"></span>
+            Edit post <span class="sr-only">(current)</span>
+          </a>
         </li>
       </ul>
     </div>
