--- a/client/src/app/management/edit-post/edit-post.component.html
+++ b/client/src/app/management/edit-post/edit-post.component.html
@@ -1,3 +1,5 @@
 <ul class="list-group">
-  <li *ngFor="let post of posts" routerLink="/management/edit-post/{{post.id}}" class="list-group-item">{{post.title}}</li>
+  <li *ngFor="let post of posts" routerLink="/management/edit-post/{{post.id}}" class="list-group-item">
+    {{post.title}}
+    <button type="button" class="btn btn-sm btn-danger float-right" (click)="deletePost(post.id, $event)">Delete</button>
 </ul>
